--- a/indx.html
+++ b/indx.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-    <header>
+    <header class="cabeçalho">
     
-    <h1>vai ser uma imaguem aqui</h1>
-    <ul>
-<li>escola</li>
-<li>estudante</li>
+    <img class="cabeçalho-imagem" src="alurastart logo 1 (1).png" alt="">
+    <ul class="cabaçalho-lista">
+<li class="cabeçalho-lista-item">escola</li>
+<li class="cabeçalho-lista-item">estudante</li>
 
 
     </ul>
